[package]
name = "myrlib"
version = "0.1.0"
authors = ["Daisuke Kato <kato.daisuke429@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myrlib"
crate-type = ["cdylib", "staticlib"]

[dependencies]

[build-dependencies]
cbindgen = "0.9.1"
